# CodeCraft

./: .gitmodules  Cargo.toml
etc/: config.json  keyboard.json  options_index.json  quickstart.json  quickstart4.json  seeds.txt
scripts/: batch.sh  check_games.py  dev.sh  games.py  loop_batch.sh  loop_visual.sh  optimize_config.py  release.sh  results_stats.py  run.sh  runner.py  site_report.py  visual.sh
src/: battle_planner.rs  bot.rs  build_planner.rs  build_simulator.rs  config.rs  debug.rs  entity.rs  entity_field.rs  entity_planner.rs  entity_simulator.rs  entity_type.rs  examples.rs  field.rs  group_field.rs  group_planner.rs  group_simulator.rs  groups.rs  influence_field.rs  main.rs  map.rs  math.rs  moving_average.rs  my_strategy.rs  path.rs  positionable.rs  range.rs  rect.rs  roles.rs  stats.rs  tasks.rs  vec2.rs  world.rs
