[package]
name = "aicup2020-elsid"
version = "0.1.0"
edition = "2018"

[dependencies]
model = { path = "cgdk/clients/Rust/model", package = "aicup2020-model" }
trans = "0.4.0-alpha.3"
rand = "0.7.3"
chrono = "0.4.19"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
enable_debug = []
write_player_view = []
max_tick = []
read_config = []
print_config = []
use_group_field = []
use_entity_field = []
use_group_planner = []
